--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,33 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* ::-webkit-scrollbar:hover {
+    width: 14px;
+} */
+
+::-webkit-scrollbar-track {
+    background-color: #35c805;
+    box-shadow: inset 0 0 5px #ffffff;
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(254, 113, 106);
+    -webkit-box-shadow: inset 0 0 6px rgb(255, 3, 3);
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(255, 138, 66);
+}
+
+
+
+
 body {
     animation: fadeInAnimation ease 2.5s;
     animation-iteration-count: 1;
@@ -33,6 +60,12 @@ body {
 h1 {
     font-size: 4.5rem;
     font-weight: 600;
+    width: 40%;
+    transition: 0.5s;
+}
+
+h1:hover {
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 20px 30px rgba(249, 213, 213, 0.273);
 }
 
 h3 {
@@ -53,7 +86,7 @@ img {
 nav {
     /* background-color: transparent; */
     /* background-image: linear-gradient(#ffff99, #ffff44); */
-    margin: 2% 7%;
+    margin: 1% 7% 2%;
 }
 
 .brand {
@@ -92,13 +125,13 @@ nav {
 .lemon-lavender {
     /* background-color: #ffff99; */
     background-image: linear-gradient(#ffff44, #ffcc80);
-    padding: 5% 15%;
+    padding: 0.5% 15% 5%;
     color: #000099;
 }
 
 .lemon-can-image {
     float: left;
-    margin: 7%;
+    margin: 5% 7% 7%;
 }
 
 .blood-orange-cardamom {
@@ -115,8 +148,17 @@ nav {
 
 .natural-text {
     color: #cc0000;
+    background-color: #ffce7e;
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+}
+
+.natural-text-2 {
+    color: #cc0000;
     background-color: #ff9999;
     margin: 0 auto;
+    width: 50%;
     text-align: center;
 }
 
@@ -143,8 +185,51 @@ footer {
     color: #cc0000;
 }
 
-.footer {
+.foot {
     font-size: 1rem;
+    position: relative;
+    left: 25%;
+    width: 50%;
+    text-align: center;
+}
+
+.heart {
+    animation: heart 10s infinite alternate;
+    transform-origin: center;
+    font-size: 1.3rem;
+}
+
+@keyframes heart {
+
+    0% {
+        /* opacity: 0.6; */
+        color: #9400D3;
+    }
+
+    20% {
+        color: #4B0082;
+    }
+
+    35% {
+        color: #0000FF;
+    }
+
+    50% {
+        color: #29a329;
+    }
+
+    60% {
+        /* color: #cccc00; */
+    }
+
+    /* 80% {
+        color: #FF7F00;
+    } */
+
+    100% {
+        /* opacity: 1; */
+        color: #FF0000;
+    }
 }
 
 span {
@@ -195,22 +280,74 @@ span {
     }
 } */
 
-@keyframes spin3D {
+/* @keyframes spin3D {
     from {
         transform: rotateY(0deg);
     }
 
     to {
         transform: rotateY(359deg);
-        /* transform: rotate3d(1, 3, 1, 300deg); */
     }
-}
+} */
 
 /* .spinhov3D:hover */
-.rotate {
+/* .rotate {
     animation-name: spin3D;
     animation-duration: 6s;
     animation-iteration-count: infinite;
-    /* linear | ease | ease-in | ease-out | ease-in-out */
     animation-timing-function: linear;
+} */
+
+.can-rotate {
+    animation-name: can-rotate;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes can-rotate {
+    0% {
+        transform: rotate3d(1.2, 1, 0, 30deg);
+    }
+
+    25% {
+        transform: rotate3d(1.2, 1, 0.5, 0deg);
+    }
+
+    50% {
+        transform: rotate3d(1.2, 1, 0.5, -10deg);
+    }
+
+    75% {
+        transform: rotate3d(1.2, 1, 0.5, 0deg);
+    }
+
+    100% {
+        transform: rotate3d(1.2, 1, 0, 30deg);
+    }
+}
+
+.reveal {
+    position: relative;
+    transform: translateX(150px);
+    opacity: 0;
+    transition: 2s all ease;
+}
+
+.reveal.active {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.heading-thickness {
+    font-weight: 500;
+    transition: transform .1s;
+}
+
+.zoom {
+    transition: transform .3s;
+}
+
+.zoom:hover {
+    transform: scale(1.1);
 }
